// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:styled:Question renders the Question and CSS properties properly when active question 1`] = `
.c0 {
  margin: 0.2rem 0.1rem;
  padding: 0.3rem 0.5rem;
  border-radius: 0.2rem;
  color: whitesmoke;
  background-color: gray;
  cursor: pointer;
}

.c0:hover {
  background-color: gray;
  color: black;
}

<li
  className="c0"
>
  2
</li>
`;

exports[`components:styled:Question renders the Question and CSS properties properly when answered question 1`] = `
.c0 {
  margin: 0.2rem 0.1rem;
  padding: 0.3rem 0.5rem;
  border-radius: 0.2rem;
  cursor: pointer;
}

.c0:hover {
  background-color: gray;
  color: black;
}

<li
  className="c0"
>
  1
</li>
`;

exports[`components:styled:Question renders the Question and CSS properties properly when disabled 1`] = `
.c0 {
  margin: 0.2rem 0.1rem;
  padding: 0.3rem 0.5rem;
  border-radius: 0.2rem;
  color: gray;
}

<li
  className="c0"
  disabled={true}
>
  3
</li>
`;

exports[`components:styled:Question renders the Question and CSS properties properly when no props passed 1`] = `
.c0 {
  margin: 0.2rem 0.1rem;
  padding: 0.3rem 0.5rem;
  border-radius: 0.2rem;
}

<li
  className="c0"
>
  0
</li>
`;
